--- a/assets/style.css
+++ b/assets/style.css
@@ -1,21 +1,10 @@
-/* header{
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 200px;
-    font-family: 'Fredoka One', cursive;
-    background-color: bisque;
-    color: black;
-    -ms-flex-align: center; */
-/* } */
-
 header {
     overflow: hidden;
     background-color: #f1f1f1;
     padding: 20px 10px;
-  }
+}
   
-  /* Style the header links */
+
 header h1 {
     color: black;
     text-align: center;
@@ -57,9 +46,17 @@ button {
     font-family: 'Courier Prime', monospace;
   }
 
-  input {
+input {
     width: 20%;
     padding: 15px 5px;
     margin: 8px 0;
     box-sizing: border-box;
-  }
+}
+
+#highscores{
+    overflow: hidden;
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 30%;
+    text-align: center;
+    align-items: center; */
