Added the highscores pannel

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,6 +57,7 @@ input {
     overflow: hidden;
     background-color: #f1f1f1;
     margin: 10px;
-    padding: 30%;
+    padding: 10%;
     text-align: center;
-    align-items: center; */
+    align-items: center;
+} 
