--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ header {
 }
   
 
-header h1 {
+h1 {
     color: black;
     text-align: center;
     padding: 12px;
@@ -57,7 +57,16 @@ input {
     overflow: hidden;
     background-color: #f1f1f1;
     margin: 10px;
-    padding: 10%;
+    padding: 5%;
     text-align: center;
     align-items: center;
+    border-radius: 10px;
+    opacity: 10%;
 } 
+
+ul{
+    list-style-type: none;
+    font-size: 20px;
+    font-family: 'Courier Prime', monospace;
+    color: black;
+}
